Combine multiple playlists into new playlist